property inlining, maven exec config