@@ -8,9 +8,32 @@
     <artifactId>c17n</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <profiles>
+        <profile>
+            <id>placeholder</id>
+            <properties>
+                <!-- since tokens are sensitive they should be passed in with mvn -->
+                <!-- mvn clean -->
+                <!-- mvn package "-Dapp.token=BAR" -->
+                <!-- mvn exec:java -Dexec.mainClass="io.ignice.c17n.AppLauncher" -X -->
+
+                <!-- mvn exec:exec -DargLine="-Dapp.token=abcd" -->
+                <app.token>PLACEHOLDER</app.token>
+            </properties>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
+
+    <!-- WORKS! -->
+    <!-- mvn install "-Dapp.token=BAR" -->
     <properties>
+        <!-- todo resource replacement candidate -->
+<!--        <app.token>FOO</app.token>-->
+
         <!-- main class -->
-        <exec.mainClass>io.ignice.c17n.ApplicationLauncher</exec.mainClass>
+        <exec.mainClass>io.ignice.c17n.AppLauncher</exec.mainClass>
 
         <!-- encoding -->
         <project.encoding>UTF-8</project.encoding>
@@ -39,6 +62,7 @@
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
         <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
     </properties>
 
@@ -80,6 +104,14 @@
     </dependencyManagement>
 
     <dependencies>
+
+        <!-- todo temp vis -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>18-ea+1</version>
+        </dependency>
+
         <!-- discord4j -->
         <dependency>
             <groupId>com.discord4j</groupId>
@@ -155,7 +187,7 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
-            <scope>runtime</scope>
+<!--            <scope>runtime</scope>-->
         </dependency>
 
         <!-- junit (test scope) -->
@@ -193,9 +225,9 @@
                     <execution>
                         <id>enforce</id>
                         <configuration>
+                            <skip>true</skip>
                             <rules>
                                 <requireSameVersions>
-
                                 </requireSameVersions>
                                 <requireUpperBoundDeps/>
                                 <banDuplicatePomDependencyVersions/>
@@ -208,6 +240,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <!-- clean plugin (lifecycle stage: CLEAN) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -234,12 +267,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
-                    <release>${maven.compiler.release}</release>
-                    <compilerArgs>--enable-preview</compilerArgs> <!-- todo rm, playing with sealed types -->
-                    <compilerArgs>-XX:+UnlockExperimentalVMOptions
-                    </compilerArgs> <!-- todo rm, playing with sealed types -->
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -258,12 +287,45 @@
             </plugin>
 
             <!-- exec plugin -->
+            <!-- https://www.mojohaus.org/exec-maven-plugin/examples/example-exec-for-java-programs.html -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>${exec-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <mainClass>${exec.mainClass}</mainClass>
+                    <mainClass>io.ignice.c17n.AppLauncher</mainClass>
+                    <executableDependency>
+                        <groupId>io.ignice</groupId>
+                        <artifactId>c17n</artifactId>
+                    </executableDependency>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>io.ignice</groupId>
+                        <artifactId>c17n</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                        <type>jar</type>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>${maven-jar-plugin.version}</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>io.ignice.c17n.AppLauncher</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
